Streams Api https://habr.com/ru/company/otus/blog/658999/